--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^5.3.0",
+    "jest": "^29.5.0",
+    "mongodb": "^5.3.0"
+  },
+  "scripts": {
     "test": "jest"
   }
 }
